--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,61 @@
-* {
-    font-family: Helvetica;
-    font-weight: 400;
+@import url('https://fonts.googleapis.com/css?family=Poppins');
+
+*{
+    font-family: 'Poppins';
+    margin: 0px;
+    padding: 0px;
+    
 }
 
-#titulo{
-    font-size: 50px;
-    color: #fff;
+
+.header{
+    justify-content: center;
     text-align: center;
+    padding: 40px;
+    background-color: #1d1e20;
+    font-size: 1.5rem;
+    flex: wrap;
 }
+
+hr {
+    margin:20px;
+}
+img {
+    max-width: 100%;
+    display: block;
+    width: 190px;
+    height: 130px;
+    margin: 10px;
+
+}
+
+.formJokenpo{
+  display: flex;
+  justify-content: space-evenly;
+  text-align: left;
+  margin: 40px;
+  align-content: space-between;
+  align-items: baseline;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.button{
+ display: flexbox;
+}
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 800px;
+    margin: auto;
+}
+
+.flex > div {
+    flex: 1 1 200px;
+    margin: 10px;
+}
+
 
 .jogador {
     margin: 0;
@@ -22,9 +70,7 @@
     font-size: 30px;
 } 
 
-#jogador {
-    background-color: #57B8FF;
-}
+
 
 #jogador-pontos, #computador-pontos {
     position: absolute;
@@ -33,20 +79,25 @@
 }
 
 #computador {
-    background-color: #D81E5B;
+    display: flex;
+    align-items: center;
     
    
 }
 
 #versus {
-    width: 100px;
+    font-size: 60px;
+    display: flex;
+    justify-content: space-evenly;
     text-align: center;
-    font-size: 30px;
+    align-content: space-between;
+    align-items: baseline;
+    flex-wrap: wrap;
+    background-color: #D81E5B;
+    
  }
 
-#pc{
-   
-}
+
 #mensagem {
    background-color: #00F6ED;
    font-size: 25px;
