Up date function

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 .header{
     justify-content: center;
     text-align: center;
-    padding: 40px;
+    padding: 25px;
     background-color: #1d1e20;
     font-size: 1.5rem;
     flex: wrap;
@@ -20,6 +20,7 @@
 hr {
     margin:20px;
 }
+
 img {
     max-width: 100%;
     display: block;
@@ -52,59 +53,45 @@ img {
 }
 
 .flex > div {
-    flex: 1 1 200px;
-    margin: 10px;
-}
-
-
-.jogador {
-    margin: 0;
-    text-align: center;
-    font-size: 30px;
-    
-}
-
-.computador {
-    margin: 0;
-    text-align: center;
-    font-size: 30px;
-} 
-
-
-
-#jogador-pontos, #computador-pontos {
-    position: absolute;
-    font-size: 30px;
-    right: 40px;
+  flex: 1 1 200px;
+ margin: 5px
 }
 
 #computador {
     display: flex;
     align-items: center;
-    
-   
+  
 }
-
+#jogador-pontos, #computador-pontos {
+    position: absolute;
+    font-size: 30px;
+    right: 40px;
+  }
+  
 #versus {
-    font-size: 60px;
+    font-size: 50px;
     display: flex;
     justify-content: space-evenly;
     text-align: center;
     align-content: space-between;
     align-items: baseline;
     flex-wrap: wrap;
-    background-color: #D81E5B;
+    color: #D81E5B;
     
  }
 
 
-#mensagem {
-   background-color: #00F6ED;
-   font-size: 25px;
+#placar {
+   font-size: 40px;
    border-radius: 5px;
    margin: 40px 0;
    padding: 20px;
    
+
+}
+
+span {
+  font-size: large;
 }
 
 
