Up date functions

--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,10 @@
     justify-content: center;
     text-align: center;
     padding: 25px;
-    background-color: #1d1e20;
+    background-color: #9EB3C2;
     font-size: 1.5rem;
     flex: wrap;
+
 }
 
 hr {
