--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,14 @@
     margin: 0px;
     padding: 0px;
     background-color:#00D1AC;
-   
 }
+
 body {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     font-size: 10px;
-
 }
 
 .header{
@@ -28,7 +27,6 @@ img {
     width: 150px;
     height: 140px;
     margin: 10px;
-
 }
 
 #formJokenpo{
@@ -43,7 +41,7 @@ img {
   font-size: 1.5rem;
 }
 
-#jogar, #reset{
+#jogar, #reset, #jogarNovamente{
   margin: 0 20px;  /*sentido horario */
   padding: 8px 16px;
   border-radius: 10px;
@@ -74,15 +72,14 @@ img {
     margin: 5px;
     font-size: 30px;
     right: 40px;
-  }
+}
   
 #versus {
     margin-top: 10px;  
     font-size: 3rem;
     text-align: center;
     color: #D81E5B;
-    
- }
+}
 
 
 #placar {
@@ -90,8 +87,6 @@ img {
    border-radius: 5px;
    margin: 40px 0;
    padding: 20px;
-   
-
 }
 
 span {
@@ -101,10 +96,32 @@ span {
 footer{
   text-align: center;
   font-size: 1rem;
-
 }
 
 #jogar-novamente{
   display: none;
+  
+}
 
+#resultado{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 1.2rem;
+  border: solid black;
+  margin: 40px 0;
+  padding: 20px;
+}
+
+#resultado > H1 {
+  color: #D81E5B;
+}
+
+#resultado > button {
+  border-radius: 40%;
+}
+
+#resultadoGanhador {
+  font-size: 1.2rem;
 }
