--- a/css/style.css
+++ b/css/style.css
@@ -8,37 +8,43 @@
 }
 
 body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    font-size: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+    
 }
 
 .header{
-  margin-top: 20px;
-  font-size: 1.3rem;
+  margin-top: 14px;
+  font-size: 1.2rem;
 }
 
 
 img {
-    max-width: 100%;
+    max-width: 80%;
     display: block;
-    width: 150px;
-    height: 140px;
+    width: 140px;
+    height: 130px;
     margin: 10px;
 }
 
 #formJokenpo{
+  /*
   display: flex;
   justify-content: space-evenly;
   text-align: center;
-  margin: 40px;
+  margin-top: 10px;
   align-content: space-between;
-  align-items: baseline;
   flex-wrap: wrap;
   flex-direction: row;
-  font-size: 1.5rem;
+  font-size: 1.5rem; */
+  
+  display: flex;
+  align-items: center;
+  font-size: 1.3rem;
+  text-align: left;
+
 }
 
 #jogar, #reset, #jogarNovamente{
@@ -53,12 +59,13 @@ img {
     display: flex;
     flex-wrap: wrap;
     max-width: 800px;
-    margin: auto;
+    height: 250px;
+    
 }
 
 .flex > div {
   flex: 1 1 200px;
- margin: 5px
+  
 }
 
 #computador {
@@ -75,7 +82,7 @@ img {
 }
   
 #versus {
-    margin-top: 10px;  
+    margin-top: 8px;  
     font-size: 3rem;
     text-align: center;
     color: #D81E5B;
@@ -85,8 +92,7 @@ img {
 #placar {
    font-size: 40px;
    border-radius: 5px;
-   margin: 40px 0;
-   padding: 20px;
+   margin: 20px 0;
 }
 
 span {
@@ -94,6 +100,7 @@ span {
 }
 
 footer{
+  margin-bottom: 0px;
   text-align: center;
   font-size: 1rem;
 }
