--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,7 @@ footer{
   margin-bottom: 0px;
   text-align: center;
   font-size: 1rem;
+ 
 }
 
 #jogar-novamente{
@@ -131,4 +132,20 @@ footer{
 
 #resultadoGanhador {
   font-size: 1.2rem;
+}
+
+@media (min-width: 767px) and (max-width: 961px) {
+
+}
+
+
+
+@media (min-width: 960px) and (max-width: 1024) {
+
+}
+
+
+
+@media (min-width: 1200px) {
+
 }
