--- a/css/style.css
+++ b/css/style.css
@@ -29,17 +29,13 @@ img {
     margin: 10px;
 }
 
+#pc {
+  width: 130px;
+  height: 130px;
+}
+
 #formJokenpo{
-  /*
-  display: flex;
-  justify-content: space-evenly;
-  text-align: center;
-  margin-top: 10px;
-  align-content: space-between;
-  flex-wrap: wrap;
-  flex-direction: row;
-  font-size: 1.5rem; */
-  
+   
   display: flex;
   align-items: center;
   font-size: 1.3rem;
@@ -56,10 +52,9 @@ img {
 }
 
 .flex {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 800px;
-    height: 250px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 40px;
     
 }
 
@@ -92,7 +87,6 @@ img {
 #placar {
    font-size: 40px;
    border-radius: 5px;
-   margin: 20px 0;
 }
 
 span {
@@ -118,8 +112,9 @@ footer{
   flex-direction: column;
   font-size: 1.2rem;
   border: solid black;
-  margin: 40px 0;
-  padding: 20px;
+  padding: 5px;
+  padding-bottom: 20px;
+  
 }
 
 #resultado > H1 {
