--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,39 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 
+/*Quando a tela for menor que 600px*/
+
+@media (min-width: 960px) {
+
+  
+  *{
+    padding: 20px;
+    margin: 10%;
+    background-color:#00D1AC;  
+  }
+
+  body{
+    display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  }
+
+    img {
+    display: block;
+    width: 60px;
+    height: 50px;
+    margin: 10px;
+}
+
+
+
+
 *{
     font-family: 'Poppins';
     margin: 0px;
     padding: 0px;
     background-color:#00D1AC;
+    font-size: 10px;
 }
 
 body {
@@ -72,7 +101,7 @@ img {
 }
 #jogador-pontos, #computador-pontos {
     margin: 5px;
-    font-size: 30px;
+    font-size: 1.2rem;
     right: 40px;
 }
   
@@ -85,12 +114,12 @@ img {
 
 
 #placar {
-   font-size: 40px;
+   font-size: 1.2rem;
    border-radius: 5px;
 }
 
 span {
-  font-size: large;
+  font-size: 1rem;
 }
 
 footer{
@@ -129,18 +158,12 @@ footer{
   font-size: 1.2rem;
 }
 
-@media (min-width: 767px) and (max-width: 961px) {
+
 
 }
 
-
-
+/* 
 @media (min-width: 960px) and (max-width: 1024) {
-
 }
-
-
-
 @media (min-width: 1200px) {
-
-}
+} */
